---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E23.py:2:7: E231 [*] Missing whitespace after ','
  |
1 | #: E231
2 | a = (1,2)
  |       ^ E231
3 | #: E231
4 | a[b1,:]
  |
  = help: Added missing whitespace after ','

ℹ Fix
1 1 | #: E231
2   |-a = (1,2)
  2 |+a = (1, 2)
3 3 | #: E231
4 4 | a[b1,:]
5 5 | #: E231

E23.py:4:5: E231 [*] Missing whitespace after ','
  |
2 | a = (1,2)
3 | #: E231
4 | a[b1,:]
  |     ^ E231
5 | #: E231
6 | a = [{'a':''}]
  |
  = help: Added missing whitespace after ','

ℹ Fix
1 1 | #: E231
2 2 | a = (1,2)
3 3 | #: E231
4   |-a[b1,:]
  4 |+a[b1, :]
5 5 | #: E231
6 6 | a = [{'a':''}]
7 7 | #: Okay

E23.py:6:10: E231 [*] Missing whitespace after ':'
  |
4 | a[b1,:]
5 | #: E231
6 | a = [{'a':''}]
  |          ^ E231
7 | #: Okay
8 | a = (4,)
  |
  = help: Added missing whitespace after ':'

ℹ Fix
3 3 | #: E231
4 4 | a[b1,:]
5 5 | #: E231
6   |-a = [{'a':''}]
  6 |+a = [{'a': ''}]
7 7 | #: Okay
8 8 | a = (4,)
9 9 | b = (5, )

E23.py:19:10: E231 [*] Missing whitespace after ','
   |
17 | def foo() -> None:
18 |     #: E231
19 |     if (1,2):
   |          ^ E231
20 |         pass
   |
   = help: Added missing whitespace after ','

ℹ Fix
16 16 | 
17 17 | def foo() -> None:
18 18 |     #: E231
19    |-    if (1,2):
   19 |+    if (1, 2):
20 20 |         pass
21 21 | 
22 22 | #: Okay

E23.py:29:20: E231 [*] Missing whitespace after ':'
   |
27 | mdtypes_template = {
28 |     'tag_full': [('mdtype', 'u4'), ('byte_count', 'u4')],
29 |     'tag_smalldata':[('byte_count_mdtype', 'u4'), ('data', 'S4')],
   |                    ^ E231
30 | }
   |
   = help: Added missing whitespace after ':'

ℹ Fix
26 26 | #: E231:2:20
27 27 | mdtypes_template = {
28 28 |     'tag_full': [('mdtype', 'u4'), ('byte_count', 'u4')],
29    |-    'tag_smalldata':[('byte_count_mdtype', 'u4'), ('data', 'S4')],
   29 |+    'tag_smalldata': [('byte_count_mdtype', 'u4'), ('data', 'S4')],
30 30 | }
31 31 | 
32 32 | #: Okay


